--- a/css/productos.css
+++ b/css/productos.css
@@ -1,6 +1,6 @@
 
 body{
-    background-color: rgb(193, 209, 212);
+    background-color: rgb(86, 114, 236);
 }
 
 
@@ -95,7 +95,7 @@ body{
     color: rgb(255, 255, 255);
     font-size: 25px;
     font-weight: 445px;
-    text-align:right;
+    text-align:left;
     margin-right: 4px;
   }
   
@@ -128,4 +128,5 @@ body{
     position:absolute;
     width: 100%;
     background: rgb(27, 27, 99);
+    text-align: left;
   }
